--- a/sqlx-cli/Cargo.toml
+++ b/sqlx-cli/Cargo.toml
@@ -37,7 +37,7 @@ clap = { version = "4.3.10", features = ["derive", "env"] }
 clap_complete = { version = "4.3.1", optional = true }
 chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 anyhow = "1.0.52"
-url = { version = "2.2.2", default-features = false }
+url = { version = "2.2.2" }
 async-trait = "0.1.52"
 console = "0.15.0"
 promptly = "0.3.0"
